--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@unction/template",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@unction/aside",
+  "version": "1.0.4",
+  "description": "Like pipe but the return value is the argument",
   "keywords": [
     "unction",
     "functional"
@@ -42,7 +42,8 @@
     "flow": "0.2.3",
     "flow-bin": "0.51.1",
     "flow-typed": "2.1.3",
-    "tap": "10.3.3"
+    "tap": "10.3.3",
+    "sinon": "2.3.4"
   },
   "dependencies": {
     "ramda": "0.24.1"
