--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "tap": "10.3.4"
   },
   "dependencies": {
-    "@unction/pipe": "*"
+    "@unction/pipe": "2.0.0"
   },
   "nyc": {
     "require": [
