--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "tap": "10.3.4"
   },
   "dependencies": {
-    "@unction/pipe": "2.0.0"
+    "@unction/pipe": "^2.1.0"
   },
   "nyc": {
     "require": [
