--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "tap": "12.6.1"
   },
   "dependencies": {
-    "@unction/pipe": "10.5.0",
-    "core-js": "3.0.1"
+    "@unction/pipe": "10.5.0"
   },
   "nyc": {
     "require": [
